<resources>
    <!-- Activities names -->
    <string name="app_name">Rentrender</string>
    <string name="mainlist">All Render Farm</string>
    <string name="about">About us</string>
    <string name="addfarm">Add render farm</string>
    <string name="edit">Edit render farm</string>
    <string name="contact">Contact us</string>
    <string name="advert">Advertisement</string>
    <string name="farm_detail">Render farm details</string>

    <!-- for MainList activity -->
    <string-array name="titles">
        <item>Home</item>
        <item>sort by Soft</item>
        <item>sort by Coutry</item>
        <item>sort by Price</item>
    </string-array>

    <!-- for About us activity -->
    <string name="about_us">Who we are?</string>
    <string name="about_us_text">
\t Dear Reader, we are a small group of enthusiast who interested in render farm services and in whole variety of render-visualization technologies. We have observed render farms industry during the last five years. So now we are ready to present our point of view on this case.</string>
    <string name="about_mission">Our mission and aims?</string>
    <string name="about_mission_text"> \t We think that the main key to success is the well-structured information about any issue. In that case our catalog contains structured information only about rendering which is available to any user which wants to understand who is in the global render game.</string>
    <string name="about_cost">What is the cost?</string>
    <string name="about_cost_text">
\t Our service is absolutely free for all users.
The owners of farms can edit information about the services many times, also for free, to make it accurate and reliable</string>
    <string name="about_hopes">Our hopes and wishes</string>
    <string name="about_hopes_text">
\t Hope that the majority of our visitors will find our resource to be useful and convenient. We wish any project of visualization to find the renderfarm for realization.</string>
    <string name="signature">
        With a smile to the world, \n
        rentrender.com team.</string>

    <!-- for Add New Render Farm activity -->
    <string name="owner">
\t If your are a render farm owner or grateful rentrender.com user who want tell us about new render farm which is absent in our catalog please fill the form below and we will take it into consideration. Thanks in advance!</string>
    <string name="fURL">Farm URL like example.com</string>
    <string name="fEmail">Farm contact mail</string>
    <string name="comment">A few words about the farm</string>
    <string name="add_farm">Add Render Farm to DB</string>

    <!-- for Contact us activity -->
    <string name="contactmail">
    \t If you have any questions or any problems with our catalog please contact us using e-mail address below. \n\n\t\t\t\t\t\t info@rentrender.com \n\n\t We appreciate your help. \n\t And we'll be glad to get any response from you!</string>

    <!-- for Advert activity -->
    <string name="ad"> \t <b>ADVERTISE ON RENTRENDER.COM!</b> \n\n Interested in placing your ad on RentRender.com? \n It’s a great idea! \n\n\t Please, send request to info@rentrender.com \n\n</string>
    <string name="wishes">Best wishes, \n The rentrender.com team</string>

    <!-- for EditFarm activity -->
    <string name="edit_rf_inf">\t For render farm owners only \n\n\t If your are a render farm owner and want to add or edit information about it, your will need to fill out following form below. \n\n\t After validation, we'll send on pointed email address an email with update link. Using that link you will be able to change any data about you render farm. \n The rentrender.com team</string>
    <string name="owner_mail">Farm owner contact mail</string>
    <string name="owner_comment">Owner comment about his farm </string>
    <string name="get_link">Get update link</string>

    <!-- for FarmDetailActivity -->
    <string name="country">Country</string>

    <!-- for ReadNewRF activity -->
    <string name="tab">\u0009\u0009\u0009\u0009</string>


    <!-- for TopFragment  -->
    <string name="title_top">Top fragment \n Here will be the list of all renderfarm around the world</string>

    <!-- for SoftFragment  -->
    <string-array name="farm_soft">
        <item>Maya</item>
        <item>3dsMax</item>
        <item>Nuke</item>
    </string-array>

    <!-- for CountryFragment  -->
    <string-array name="farm_country">
        <item>Russia</item>
        <item>Barcelona</item>
        <item>Ukraine</item>
    </string-array>

    <!-- for PriceFragment  -->
    <string-array name="farm_price">
        <item>Free</item>
        <item>Cheap</item>
        <item>Expensive</item>
    </string-array>

    <!-- for Menu_main  -->
    <string name="action_dbRf">DB render farm</string>
    <string name="action_newRf">New render farm</string>
    <string name="action_settings">Menu settings</string>

    <!-- for Farm Add Activity -->
    <string name="general">General information</string>
    <string name="fName">Render Farm Name</string>
    <string name="fType">Render Farm Type</string>
    <string name="fCountry">Location country</string>
    <string name="fSupport">Support option. Ex: 24/7. Fully automated</string>
    <string name="fUpdate">Update day. Ex: 1 april 2018</string>
    <string name="specifications">Specifications</string>
    <string name="fPower">Farm Power. Ex: 9 x Dual Xeon E5&#8211;16 cores</string>
    <string name="fNode">Amount of Node. Example \"9\"</string>
    <string name="fCPUnode">CPUs per node. Ex: 2</string>
    <string name="fCPU">CPU description. Ex: Xenon e5&#8211;2670</string>
    <string name="fCores">Cores per node. Ex: 16 cores</string>
    <string name="fRAM">RAM per node. Ex: 96Gb</string>
    <string name="fUpload">Upload options. Ex: filestore</string>
    <string name="fDownload">Download options. Ex: filestore</string>
    <string name="payment_detail">Payment details</string>
    <string name="fPay">Payment options. Ex: Skrill, webmoney, paypal</string>
    <string name="fPrice">Price comment. Ex: 1.5$ per node</string>
    <string name="fDiscount">Discount options. Ex: 5% from 1000$ </string>
    <string name="more_detail">More details</string>
    <string name="fMore">Some comment about farm</string>
    <string name="soft">Supported software</string>
    <string name="vrayscatter">vrayscatter</string>
    <string name="mudbox">mudbox</string>


    <!-- for Farm Detail Activity -->
    <string name="rfName">Name</string>
    <string name="rfType">Type</string>
    <string name="rfCountry">Country</string>
    <string name="rfEmail">Email</string>
    <string name="rfSupport">Support</string>
    <string name="rfWebsite">Website</string>
    <string name="Update">Update</string>
    <string name="rfPower">Power description</string>
    <string name="rfNode">Number of nodes</string>
    <string name="rfCPUnode">CPUs per node</string>
    <string name="rfCPU">CPU description</string>
    <string name="rfCores">Cores per node</string>
    <string name="rfRAM">RAM per node</string>
    <string name="rfUpload">Upload options</string>
    <string name="rfDownload">Download options</string>
    <string name="rfPayment">Payment options</string>
    <string name="rfPrice">Price comment</string>
    <string name="rfDiscount">Discount options</string>

</resources>
