<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FarmDetailActivity">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical"
        tools:context=".FarmAddActivity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/general"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/fName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="20"
            android:hint="@string/fName"
            android:inputType="text"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/fType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="20"
            android:hint="@string/fType"
            android:inputType="text"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/fURL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="20"
            android:hint="@string/fURL"
            android:inputType="textUri"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/fCountry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="20"
            android:hint="@string/fCountry"
            android:inputType="text"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/fEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="20"
            android:hint="@string/fMail"
            android:inputType="textEmailAddress"
            android:textSize="16sp" />
        <EditText
            android:id="@+id/fSupport"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="20"
            android:hint="@string/fSupport"
            android:inputType="textEmailAddress"
            android:textSize="16sp" />
        <EditText
            android:id="@+id/fUpdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="20"
            android:hint="@string/fUpdate"
            android:inputType="textEmailAddress"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/specifications"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/fPower"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="20"
            android:hint="@string/fPower"
            android:inputType="text"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/fNode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="20"
            android:hint="@string/fNode"
            android:inputType="text"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/fCPUnode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="20"
            android:hint="@string/fCPUnode"
            android:inputType="text"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/fCPU"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="20"
            android:hint="@string/fCPU"
            android:inputType="text"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/fCores"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="20"
            android:hint="@string/fCores"
            android:inputType="text"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/fRAM"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="20"
            android:hint="@string/fRAM"
            android:inputType="text"
            android:textSize="16sp" />
        <EditText
            android:id="@+id/fUpload"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="20"
            android:hint="@string/fUpload"
            android:inputType="text"
            android:textSize="16sp" />
        <EditText
            android:id="@+id/fDownload"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="20"
            android:hint="@string/fDownload"
            android:inputType="text"
            android:textSize="16sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/payment_detail"
            android:textSize="16sp"
            android:textStyle="bold" />
        <EditText
            android:id="@+id/fPay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="20"
            android:hint="@string/fPay"
            android:inputType="text"
            android:textSize="16sp" />
        <EditText
            android:id="@+id/fPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="20"
            android:hint="@string/fPrice"
            android:inputType="text"
            android:textSize="16sp" />
        <EditText
            android:id="@+id/fDiscount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="20"
            android:hint="@string/fDiscount"
            android:inputType="text"
            android:textSize="16sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/more_detail"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/fMore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/fMore"
            android:inputType="text"
            android:textSize="16sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/soft"
            android:textSize="16sp"
            android:textStyle="bold" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_marginTop="4dp"
                android:layout_marginRight="4dp"
                android:layout_marginEnd="4dp"
                android:contentDescription="@string/vrayscatter"
                android:src="@drawable/ic_vrayscatter" />
            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_marginTop="4dp"
                android:layout_marginRight="4dp"
                android:layout_marginEnd="4dp"
                android:contentDescription="@string/mudbox"
                android:src="@drawable/ic_mudbox" />
        </LinearLayout>

        <Button
            android:id="@+id/btnAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="21dp"
            android:text="@string/add_farm" />

    </LinearLayout>
</ScrollView>






